# LLDB-LoadManaged

src/: PluginInterop.sln
src/LoadManaged/: CMakeLists.txt  ClrInterop.cpp  coreruncommon.cpp  coreruncommon.h  library.cpp  library.h  lldbservices.h  mstypes.h  pal_mstypes.h  services.cpp  services.h  sosplugin.h  unknwn.h
src/PluginInterop/: BinaryReaderExtensions.cs  Export.cs  Exports.cs  FunctionExport.cs  PEImageExtensions.cs  Plugin.cs  PluginInterop.csproj  PluginLoadContext.cs  PluginLoader.cs
src/PluginInterop/PE/: CorHeader.cs  IMAGE_EXPORT_DIRECTORY.cs  ImageDataDirectory.cs  ImageFileHeader.cs  ImageOptionnalHeader.cs  ImageSectionHeader.cs  PEImage.cs
